--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -5,25 +5,25 @@ metadata:
     app.openshift.io/vcs-ref: f7580aa1eb6f7176705176e201ecff4de93edafb
     app.openshift.io/vcs-uri: https://github.com/upslopeio/express-sample-app
   labels:
-    app: express-sample-app
-    app.kubernetes.io/instance: express-sample-app-instance
-    app.kubernetes.io/name: express-sample-app
+    app: hello-world-app
+    app.kubernetes.io/instance: hello-world-app-instance
+    app.kubernetes.io/name: hello-world-app
     app.openshift.io/runtime: js
-  name: express-sample-app
+  name: hello-world-app
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app.kubernetes.io/instance: express-sample-app-instance
-      app.kubernetes.io/name: express-sample-app
+      app.kubernetes.io/instance: hello-world-app-instance
+      app.kubernetes.io/name: hello-world-app
   template:
     metadata:
       creationTimestamp: null
       labels:
-        app.kubernetes.io/instance: express-sample-app-instance
-        app.kubernetes.io/name: express-sample-app
+        app.kubernetes.io/instance: hello-world-app-instance
+        app.kubernetes.io/name: hello-world-app
     spec:
       containers:
         - env:
@@ -42,7 +42,7 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 1
-          name: express-sample-app
+          name: hello-world-app
           ports:
             - containerPort: 3000
               name: http
